Bug 127168 - "Ranges containing merged cells…" modal dialog underlays Autofilter pull-down
Summary: "Ranges containing merged cells…" modal dialog underlays Autofilter pull-down
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All Linux (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0 target:6.3.2
Keywords:
Depends on:
Blocks: AutoFilter
  Show dependency treegraph
 
Reported: 2019-08-26 15:18 UTC by Tristan Miller
Modified: 2019-09-03 13:04 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing bug (82.93 KB, image/png)
2019-08-26 15:18 UTC, Tristan Miller
Details
Sample spreadsheet for reproducing bug (7.47 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-08-26 15:19 UTC, Tristan Miller
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tristan Miller 2019-08-26 15:18:10 UTC
Description:
When using the Autofilter pull-down menu to sort a column, the sort will fail if the spreadsheet contains vertically merged cells -- this is a separate issue documented in Bug 85807.  The problem I am reporting is that LibreOffice reports this failure by popping up a focus-stealing modal error dialog *underneath* the Autofilter pull-down menu.  This has two unfortunate consequences:

1) Depending on the placement of the pull-down menu, it can be impossible to read the error message.

2) At least on my windowing system (KDE Plasma), the modal dialog cannot be moved or resized, and steals focus not just within the LibreOffice Calc application but from all other windows.  So it is basically impossible to use the computer for anything until the error dialog is dismissed, but it is not obvious how to do this as the dialog's "OK" button is hiding behind the Autofilter pull-down.  You either need to blindly click on the unlabelled edges of the "OK" button or else press the Escape key.

Steps to Reproduce:
Also attached is a sample spreadsheet for triggering the bug.  Use the following steps to reproduce:

1. Open the attached spreadsheet.
2. Activate the Autofilter pull-down menu in cell A1.
3. Select "Sort Ascending" or "Sort Descending".

Actual Results:
4. The above-described focus-stealing modal error dialog pops up underneath the pull-down menu.  Attached is a screenshot showing what the problematic behaviour looks like.

Expected Results:
4. The modal error dialog should pop up *over* the pull-down menu, and it should not steal focus from other programs.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
Version: 6.3.0.4
Build ID: 30(Build:4)
CPU threads: 12; OS: Linux 5.2; UI render: default; VCL: gtk3; 
Locale: en-GB (en_CA.UTF-8); UI-Language: en-US
Calc: threaded

I am running LibreOffice from openSUSE Tumbleweed (x86_64) packages.  My windowing system is as follows:

KDE Plasma Version: 5.16.4
KDE Frameworks Version: 5.61.0
Qt Version: 5.13.0
Comment 1 Tristan Miller 2019-08-26 15:18:58 UTC
Created attachment 153666 [details]
Screenshot showing bug
Comment 2 Tristan Miller 2019-08-26 15:19:19 UTC
Created attachment 153667 [details]
Sample spreadsheet for reproducing bug
Comment 3 Tristan Miller 2019-08-26 15:20:28 UTC
Solving Bug 85807 would end up solving this issue as a side-effect.
Comment 4 raal 2019-08-26 16:51:07 UTC
I can confirm with Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
and Version: 6.4.0.0.alpha0+
Build ID: 2bed8af91fc2654b9ed2432f969d32d5741a529b
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3;
Comment 5 Xisco Faulí 2019-09-02 16:03:17 UTC
@Caolán, I thought you might be interested in this issue...
Comment 6 Caolán McNamara 2019-09-03 08:42:53 UTC
If we dismiss the menu before executing the sort, rather than after as it currently stands, the issue wouldn't arise
Comment 7 Commit Notification 2019-09-03 10:14:28 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/2d2b08eb1c63e1d12d2dd12abf97e34f56e921c6%5E%21

Resolves: tdf#127168 dismiss menu before executing sort

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2019-09-03 10:14:58 UTC
backport to 6-3 in gerrit
Comment 9 Commit Notification 2019-09-03 13:04:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/6aade14148e3d56706b074392ca3569b2a2a8376%5E%21

Resolves: tdf#127168 dismiss menu before executing sort

It will be available in 6.3.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.