Resolves: tdf#127168 dismiss menu before executing sort

so any error dialog which are parented to the calc window are not
hidden by the menu which is destined to be dismissed after the
sort anyway

Change-Id: I7c49737231901de0e61c290fe161d37809d68424